--- a/demo/index.html
+++ b/demo/index.html
@@ -105,16 +105,65 @@
       <div class="dotted1"></div>
     </div>
   </div>
+  <div class="scale1">
+    <div class="record"><span>{{text}}</span><span class="red">{{amounts}}</span></div>
+    <div class="all">
+      <b class="ang"></b>
+      <i class="line"></i>
+      <div class="dotted"></div>
+        <caliper
+                v-model="amount"
+                :list="list"
+                :set-min-num="setMinNum"
+                :text="text"
+                @change="onChanges"
+        >
+        </caliper>
+      <div class="dotted1"></div>
+    </div>
+  </div>
 </div>
 <script src="//cdn.bootcss.com/vue/2.3.3/vue.js"></script>
 </body>
 <script>
+  const arry = [
+    {
+      'move': 0,
+      'line': 10000,
+      'interval': 100,
+      'transformMove': 0,
+      'transformLine': 0
+    }, {
+      'move': 10000,
+      'line': 100000,
+      'interval': 1000,
+      'transformMove': 0,
+      'transformLine': 0
+    }, {
+      'move': 100000,
+      'line': 1000000,
+      'interval': 10000,
+      'transformMove': 0,
+      'transformLine': 0
+    }, {
+      'move': 1000000,
+      'line': 2000000,
+      'interval': 100000,
+      'transformMove': 0,
+      'transformLine': 0
+    }
+  ]
   new Vue({
     el: '#example',
     components: {
       caliper: VueCaliper
     },
     data: {
+      amount: 15000,
+      amounts: 15000,
+      list: arry,
+      setMinNum: 1000,
+      text: '单笔投资金额(元)',
       day: 30,
       mes: 30,
       //list中多个对象时,每个对象中每小格子可对应数值不同；前一个对象line为后一对象move
@@ -134,6 +183,9 @@
     methods: {
       onChange (val) {
         this.mes = val
+      },
+      onChanges (val) {
+        this.amounts = val
       }
     }
   });
