--- a/dists/index.html
+++ b/dists/index.html
@@ -94,14 +94,14 @@
       <b class="ang"></b>
       <i class="line"></i>
       <div class="dotted"></div>
-      <caliper
-              v-model="day"
-              :list="listDay"
-              :set-min-num="setMinDay"
-              :interval-num="15"
-              :widths="4200"
-              @change="onChange"
-      ></caliper>
+      <vue-caliper
+        v-model="day"
+        :list="listDay"
+        :set-min-num="setMinDay"
+        :interval-num="15"
+        :widths="4200"
+        @change="onChange"
+      ></vue-caliper>
       <div class="dotted1"></div>
     </div>
   </div>
@@ -111,19 +111,18 @@
       <b class="ang"></b>
       <i class="line"></i>
       <div class="dotted"></div>
-        <caliper
-                v-model="amount"
-                :list="list"
-                :set-min-num="setMinNum"
-                @change="onChanges"
-        >
-        </caliper>
+        <vue-caliper
+          v-model="amount"
+          :list="list"
+          :set-min-num="setMinNum"
+          @change="onChanges"
+        ></vue-caliper>
       <div class="dotted1"></div>
     </div>
   </div>
 </div>
 <script src="//cdn.bootcss.com/vue/2.3.3/vue.js"></script>
-<script type="text/javascript" src="./main.js"></script></body>
+<script type="text/javascript" src="./vue-caliper.js"></script></body>
 <script>
   const arry = [
     {
@@ -154,9 +153,6 @@
   ]
   new Vue({
     el: '#example',
-    components: {
-      caliper: VueCaliper
-    },
     data: {
       amount: 15000,
       amounts: 15000,
