--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
       <vue-caliper
         v-model="day"
         :list="listDay"
-        :set-min-num="setMinDay"
-        :interval-num="15"
+        :min-value="setMinDay"
+        :interval="15"
         :widths="4200"
         @change="onChange"
       ></vue-caliper>
@@ -114,7 +114,7 @@
         <vue-caliper
           v-model="amount"
           :list="list"
-          :set-min-num="setMinNum"
+          :min-value="setMinNum"
           @change="onChanges"
         ></vue-caliper>
       <div class="dotted1"></div>
